# code-analyst-agent

./: .dockerignore  .env.example  .gitignore  CI_CD_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  PRODUCTION_READY_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  cloud-run-config.yaml  complex_codebase_analysis_prd.md  k8s-deployment.yaml  pyproject.toml
.github/workflows/: README.md  ci-cd.yml  ci.yml  secrets.example.json
codebase_analysis/: __init__.py  adk_agent.py  api.py  cli.py  logging_utils.py  orchestrator.py  webui.py
codebase_analysis/agents/: __init__.py  base.py  parser_agent.py  performance_agent.py  security_agent.py
codebase_analysis/report/: __init__.py  generator.py
codebase_analysis/report/templates/: report.html
codebase_analysis/static/: app.js  styles.css
codebase_analysis/templates/: index.html
codebase_analysis/tools/: __init__.py  bigquery.py  cve.py  gemini.py
demo/: demo_script.md
docs/: architecture.md
test_repo/: test.py
tests/: __init__.py  conftest.py  test_adk_agent.py  test_api.py  test_api_comprehensive.py  test_basic.py  test_bigquery.py  test_cli.py  test_enhanced_security.py  test_orchestrator.py  test_performance.py  test_report_generator.py  test_security.py
