[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-analysis"
version = "0.1.0"
description = "Multi-agent codebase analysis tool leveraging Gemini 2.5 Pro and Google ADK"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "click>=8.1",
  "Flask>=2.3",
  "jinja2>=3.1",
  "GitPython>=3.1",
  "requests>=2.28",
  "google-cloud-aiplatform>=1.38",
  "google-auth>=2.17",
  "networkx>=3.1",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "flask-limiter>=3.5",
  "gunicorn>=22.0",
  "fpdf2>=2.7",
  "python-docx>=1.1.0",
  "google-generativeai>=0.4.0",
]

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "flask-cors>=4.0",
  "python-json-logger>=2.0",
]

report = []

[project.scripts]
codebase-analyze = "codebase_analysis.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["codebase_analysis*"] 